[package]
name = "paths"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
nalgebra = "0.32.4"
# plotters = "0.3.5"
num = "0.4.1"
pathfinding = "4.9.1"
bevy_math = "0.13.2"
itertools = "0.12.1"

[dev-dependencies]
plotters = "0.3.5"
criterion = "0.3"

[[bench]]
name = "first"
harness = false
